--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -167,6 +167,12 @@
     <Compile Include="..\Vts.Test\Modeling\ValidateInverseSolution.cs">
       <Link>Modeling\ValidateInverseSolution.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs">
+      <Link>MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs">
+      <Link>MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\DetectorInputTests.cs</Link>
     </Compile>
@@ -196,6 +202,9 @@
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCTallyActionsTests.cs">
       <Link>MonteCarlo\Detectors\pMCTallyActionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\IO\DetectorIOTests.cs">
+      <Link>MonteCarlo\IO\DetectorIOTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\MonteCarloFactoriesTests.cs">
       <Link>MonteCarlo\MonteCarloFactoriesTests.cs</Link>
