Added DetectorIO MomentumTransfer test. Cleaned up DetectorInput classes constructor formulation. Renamed pMCMuaMusROfRho to pMCROfRho, similarly for pMCMuaMusRofRhoAndTime. Previously thought would have separate pMC detectors for each type of perturbation (e.g. Mua, Mus, Mua&Mus) but all perturbations will be in one class.
--HG--
branch : dc-110309-detector_output_tally_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -547,11 +547,11 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\MomentumTransferOfRhoAndZDetector.cs">
       <Link>MonteCarlo\Detectors\MomentumTransferOfRhoAndZDetector.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCMuaMusROfRhoAndTimeDetector.cs">
-      <Link>MonteCarlo\Detectors\pMCMuaMusROfRhoAndTimeDetector.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoAndTimeDetector.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCMuaMusROfRhoDetector.cs">
-      <Link>MonteCarlo\Detectors\pMCMuaMusROfRhoDetector.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\pMCROfRhoDetector.cs">
+      <Link>MonteCarlo\Detectors\pMCROfRhoDetector.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\RDiffuseDetector.cs">
       <Link>MonteCarlo\Detectors\RDiffuseDetector.cs</Link>
