--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -261,6 +261,8 @@
     <Compile Include="MonteCarlo\Factories\TallyActionFactory.cs" />
     <Compile Include="MonteCarlo\Factories\TissueFactory.cs" />
     <Compile Include="MonteCarlo\Helpers\Optics.cs" />
+    <Compile Include="MonteCarlo\Helpers\PolarAzimuthalRotationAngles.cs" />
+    <Compile Include="MonteCarlo\Helpers\ThreeAxisRotationAngles.cs" />
     <Compile Include="MonteCarlo\Interfaces\IpMCTally.cs" />
     <Compile Include="MonteCarlo\Interfaces\IHistoryTally.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITally.cs" />
@@ -284,14 +286,11 @@
     <Compile Include="MonteCarlo\PhotonData\SubRegionCollisionInfoCustomBinarySerializer.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
     <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
-    <Compile Include="MonteCarlo\Sources\CollimatedLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\CustomPointSourceNew.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSourceInput.cs" />
-    <Compile Include="MonteCarlo\Sources\IsotropicLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\IsotropicPointSourceNew.cs" />
     <Compile Include="MonteCarlo\Sources\LineSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\CollimatedRectangularSource.cs" />
     <Compile Include="MonteCarlo\Sources\CustomPointSource.cs" />
+    <Compile Include="MonteCarlo\Sources\LineSourceCustom.cs" />
+    <Compile Include="MonteCarlo\Sources\PointSourceCustom.cs" />
     <Compile Include="MonteCarlo\Sources\SourceBase.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
     <Compile Include="MonteCarlo\Sources\SourceDefinition.cs" />
