Included Source Helper
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -299,6 +299,7 @@
     <Compile Include="MonteCarlo\Sources\PointSourceMultiDirectional.cs" />
     <Compile Include="MonteCarlo\Sources\SourceBaseOld.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
+    <Compile Include="MonteCarlo\Sources\SourceHelper.cs" />
     <Compile Include="MonteCarlo\TallyActions\AOfRhoAndZTally.cs" />
     <Compile Include="MonteCarlo\TallyActions\ATotalTally.cs" />
     <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeTally.cs" />
