--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -287,6 +287,18 @@
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
     <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingFlat.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomFlat.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingFlat.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalFalt.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAFlat.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAGaussian.cs" />
     <Compile Include="MonteCarlo\Sources\LineSources\LineSourceCollimatedGaussian.cs" />
     <Compile Include="MonteCarlo\Sources\LineSources\LineSourceConvergingGaussian.cs" />
     <Compile Include="MonteCarlo\Sources\LineSources\LineSourceCustomGaussian.cs" />
